--- a/pagina_inicial.html
+++ b/pagina_inicial.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo1.css">
     <title>Document</title>
-    <script src="codigo.js"></script>
 </head>
 <body>
-    
+    <h1>Projeto TCC</h1>
+    <table>
+        <tr>
+            <td>V</td>
+            <td>V</td>
+            <td>=</td>
+            <td><input type="button" value="F"></td>
+        </tr>
+        <tr>
+            <td>F</td>
+            <td>V</td>
+            <td>=</td>
+            <td><input type="button" value="F"></td>
+        </tr>
+        <tr>
+            <td>V</td>
+            <td>F</td>
+            <td>=</td>
+            <td><input type="button" value="F"></td>
+        </tr>
+        <tr>
+            <td>F</td>
+            <td>F</td>
+            <td>=</td>
+            <td><input type="button" value="F"></td>
+        </tr>
+    </table>
+
+    <h1>solução</h1>
 </body>
+<script src="codigo.js"></script>
 </html>
