--- a/index.html
+++ b/index.html
@@ -14,29 +14,30 @@
             <td>V</td>
             <td>V</td>
             <td>=</td>
-            <td><input type="button" value="F"></td>
+            <td><input id="0" type="button" value="F" onclick="Ler_Botao(0)"></td>
         </tr>
         <tr>
             <td>F</td>
             <td>V</td>
             <td>=</td>
-            <td><input type="button" value="F"></td>
+            <td><input id="1" type="button" value="F" onclick="Ler_Botao(1)"></td>
         </tr>
         <tr>
             <td>V</td>
             <td>F</td>
             <td>=</td>
-            <td><input type="button" value="F"></td>
+            <td><input id="2" type="button" value="F" onclick="Ler_Botao(2)"></td>
         </tr>
         <tr>
             <td>F</td>
             <td>F</td>
             <td>=</td>
-            <td><input type="button" value="F"></td>
+            <td><input id="3" type="button" value="F" onclick="Ler_Botao(3)"></td>
         </tr>
     </table>
 
     <h1>solução</h1>
+    <p id="Resultado"></p>
 </body>
 <script src="codigo.js"></script>
 </html>
