--- a/index.html
+++ b/index.html
@@ -9,35 +9,52 @@
 </head>
 <body>
     <h1>Projeto TCC</h1>
+    <h2>Informações gerais</h2>
+
+    <form>
+        <label>Quantas entradas de informação</label><br>
+        <input type="number" min="2" max="5"><br>
+        <label>Quantas saidas de informação</label><br>
+        <input type="number" min="1" max="5"><br>
+    </form>
+
+    <h2>Tabela</h2>
     <table>
         <tr>
+            <td>A</td>
+            <td>B</td>
+            <td></td>
+            <td style="text-align: center;">S1</td>
+        </tr>
+        <tr>
             <td>V</td>
             <td>V</td>
             <td>=</td>
-            <td><input id="0" type="button" value="F" onclick="Ler_Botao(0)"></td>
+            <td><input id="0" type="button" value="F" onclick="Ler_Botao(0,0)"></td>
         </tr>
         <tr>
             <td>F</td>
             <td>V</td>
             <td>=</td>
-            <td><input id="1" type="button" value="F" onclick="Ler_Botao(1)"></td>
+            <td><input id="1" type="button" value="F" onclick="Ler_Botao(1,0)"></td>
         </tr>
         <tr>
             <td>V</td>
             <td>F</td>
             <td>=</td>
-            <td><input id="2" type="button" value="F" onclick="Ler_Botao(2)"></td>
+            <td><input id="2" type="button" value="F" onclick="Ler_Botao(2,0)"></td>
         </tr>
         <tr>
             <td>F</td>
             <td>F</td>
             <td>=</td>
-            <td><input id="3" type="button" value="F" onclick="Ler_Botao(3)"></td>
+            <td><input id="3" type="button" value="F" onclick="Ler_Botao(3,0)"></td>
         </tr>
     </table>
 
-    <h1>solução</h1>
+    <h1>Solução</h1>
     <p id="Resultado"></p>
+    <p id="Valores"></p>
 </body>
 <script src="codigo.js"></script>
 </html>
