--- a/index.html
+++ b/index.html
@@ -27,36 +27,43 @@
             <td>B</td>
             <td></td>
             <td style="text-align: center;">S1</td>
+            <td style="text-align: center;">S2</td>
         </tr>
         <tr>
             <td>V</td>
             <td>V</td>
             <td>=</td>
-            <td><input id="0" type="button" value="F" onclick="Ler_Botao(0)"></td>
-        </tr>
-        <tr>
-            <td>F</td>
-            <td>V</td>
-            <td>=</td>
-            <td><input id="1" type="button" value="F" onclick="Ler_Botao(1)"></td>
+            <td><input id="00" type="button" value="F" onclick="Ler_Botao(0,0)"></td>
+            <td><input id="01" type="button" value="F" onclick="Ler_Botao(0,1)"></td>
         </tr>
         <tr>
             <td>V</td>
             <td>F</td>
             <td>=</td>
-            <td><input id="2" type="button" value="F" onclick="Ler_Botao(2)"></td>
+            <td><input id="10" type="button" value="F" onclick="Ler_Botao(1,0)"></td>
+            <td><input id="11" type="button" value="F" onclick="Ler_Botao(1,1)"></td>
+        </tr>
+        <tr>
+            <td>F</td>
+            <td>V</td>
+            <td>=</td>
+            <td><input id="20" type="button" value="F" onclick="Ler_Botao(2,0)"></td>
+            <td><input id="21" type="button" value="F" onclick="Ler_Botao(2,1)"></td>
         </tr>
         <tr>
             <td>F</td>
             <td>F</td>
             <td>=</td>
-            <td><input id="3" type="button" value="F" onclick="Ler_Botao(3)"></td>
+            <td><input id="30" type="button" value="F" onclick="Ler_Botao(3,0)"></td>
+            <td><input id="31" type="button" value="F" onclick="Ler_Botao(3,1)"></td>
         </tr>
     </table>
 
     <h1>Solução</h1>
-    <p id="Resultado"></p>
+    <p id="Info_Botao"></p>
     <p id="Valores"></p>
+    <h2>Resultado Bruto</h2>
+    <p id="Resultado_Bruto"></p>
 </body>
 <script src="codigo.js"></script>
 </html>
