o pai é brabo, deu boa

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
     </table>
 
     <h1>Solução</h1>
-    <p id="Info_Botao"></p>
+    <p id="Info_Botao0"></p>
+    <p id="Info_Botao1"></p>
+    <p id="Info_Botao2"></p>
+    <p id="Info_Botao3"></p>
     <p id="Valores"></p>
     <h2>Resultado Bruto</h2>
     <p id="Resultado_Bruto"></p>
