começando a criação de tabela

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </form>
 
     <h2>Tabela</h2>
+    <table id="Tabela_Gigante">
+
+    </table>
     <table>
         <tr>
             <td>A</td>
