--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     </form>
 
     <h2>Tabela</h2>
-    <table id="Tabela_Gigante">
+    <table id="Tabela">
 
     </table>
+    <br>
     <table>
         <tr>
             <td>A</td>
@@ -70,6 +71,8 @@
     <p id="Valores"></p>
     <h2>Resultado Bruto</h2>
     <p id="Resultado_Bruto"></p>
+
+    <input type="button" value="Contar" onclick="Test_Contador()">
 </body>
 <script src="codigo.js"></script>
 </html>
