--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </form>
 
     <h2>Tabela</h2>
-    <table id="Tabela">
+    <div id="Tabela">
 
-    </table>
+    </div>
     <br>
     <table>
         <tr>
@@ -71,8 +71,6 @@
     <p id="Valores"></p>
     <h2>Resultado Bruto</h2>
     <p id="Resultado_Bruto"></p>
-
-    <input type="button" value="Contar" onclick="Test_Contador()">
 </body>
 <script src="codigo.js"></script>
 </html>
