tentando colocar o titulo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Projeto TCC</h1>
+    <input type="button" value="test" onclick="tests()">
     <h2>Informações gerais</h2>
 
     <form>
