--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Projeto TCC</h1>
     <input type="button" value="test" onclick="tests()">
-    <h2>Informações gerais</h2>
+    <h2>Informações para Criar a Tabela</h2>
 
     <form>
         <label>Quantas entradas de informação</label><br>
@@ -26,7 +26,7 @@
 
     </div>
     <br>
-
+    <input type="button" value="Calcular" onclick="Calculo()">
     <h1>Solução</h1>
     <h2>Resultado Bruto</h2>
     <p id="Resultado_Bruto"></p>
