tentando organizar o calculo

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <h2>Informações para Criar a Tabela</h2>
 
     <form>
-        <label>Quantas entradas de informação</label><br>
-        <input id="Numero_Entradas" type="number" min="2"><br>
-        <label>Quantas saidas de informação</label><br>
-        <input id="Numero_Saidas" type="number" min="1"><br>
+        <label>Quantas entradas de informação :
+            <br><input id="Numero_Entradas" type="number" min="2">
+        </label><br>
+        <label>Quantas saidas de informação :
+            <br><input id="Numero_Saidas" type="number" min="1">
+        </label><br>
         <br>
         <input type="button" value="Salvar" onclick="Ler_fomulario()">
     </form>
