achei uma solução e mais 10 problemas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1>Projeto TCC</h1>
-    <input type="button" value="test" onclick="tests()">
+    <input type="button" value="test" onclick="tests()"><br>
+    <input type="button" value="haaaaaaaaaa" onclick="Quantos_Entre()">
     <h2>Informações para Criar a Tabela</h2>
 
     <form>
