--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Projeto TCC</h1>
-    <input type="button" value="test" onclick="tests()"><br>
+    <input type="button" value="test" onclick="Simplificar()"><br>
     <h2>Informações para Criar a Tabela</h2>
 
     <form>
