--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
     <br>
     <input type="button" value="Calcular" onclick="Calculo()">
     <h1>Solução</h1>
-    <h2>Resultado Bruto</h2>
-    <p id="Resultado_Bruto"></p>
+    <div>
+        <p id="Resultado_Bruto"></p>
+    </div>
 </body>
 <script src="codigo.js"></script>
 </html>
