--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <h1>Projeto TCC</h1>
-    <input type="button" value="test" onclick="Simplificar()"><br>
     <h2>Informações para Criar a Tabela</h2>
 
     <form>
@@ -29,9 +28,9 @@
     </div>
     <br>
     <input type="button" value="Calcular" onclick="Calculo()">
-    <h1>Solução</h1>
-    <div>
-        <p id="Resultado_Bruto"></p>
+    <h1>Soluções</h1>
+    <div id="solu">
+
     </div>
 </body>
 <script src="codigo.js"></script>
