fazendo melhorias no codigo

--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 
     </div>
 </body>
-<script src="codigo.js"></script>
+<script src="cria_tabela.js"></script>
 <script src="Simplificar.js"></script>
 </html>
