--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Gerador de codigo pronto</title>
 </head>
 <body>
-    <h1>Projeto TCC</h1>
+    <h1>Calculadora para expressões booleanas</h1>
     <h2>Informações para Criar a Tabela</h2>
 
     <form>
