--- a/test/index.html
+++ b/test/index.html
@@ -15,9 +15,9 @@
             <td>variavel 3</td>
         </tr>
         <tr>
-            <td><input type="button" value="F"></td>
-            <td><input type="button" value="F"></td>
-            <td><input type="button" value="F"></td>
+            <td><input type="button" id="0" onclick="troca_valor('0')" value="F"></td>
+            <td><input type="button" id="1" onclick="troca_valor('1')" value="F"></td>
+            <td><input type="button" id="2" onclick="troca_valor('2')" value="F"></td>
         </tr>
     </table>
     <br>
@@ -29,5 +29,7 @@
             <td><div class="resul" id="S4">S4</div></td>
         </tr>
     </table>
+    <img src="./Captura de tela 2023-12-01 112827.png" alt="test">
 </body>
+<script src="./script.js"></script>
 </html>
