--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1>Calculadora para expressões booleanas</h1>
+    <a href="./simplifica.html">Simplificador</a>
+    <hr>
     <h2>Informações para Criar a Tabela</h2>
 
     <form>
@@ -38,6 +40,6 @@
 
     </div>
 </body>
-<script src="cria_tabela.js"></script>
-<script src="Simplificar.js"></script>
+<script src="./scrips/cria_tabela.js"></script>
+<script src="./scrips/Simplificar.js"></script>
 </html>
