--- a/simplifica.html
+++ b/simplifica.html
@@ -9,7 +9,12 @@
     <h1>Simplifição de expressões booleanas</h1>
     <a href="./index.html">Calculadora</a>
     <hr>
-    
+    <input type="text" id="A"><br>
+    <input type="button" value="Simplificar" onclick="Calculo()">
+    <div id="resultados">
+
+    </div>
 </body>
+<script src="./scrips/organiza_simpli.js"></script>
 <script src="./scrips/Simplificar.js"></script>
 </html>
