começando o Redus_parent

--- a/simplifica.html
+++ b/simplifica.html
@@ -18,4 +18,5 @@
 </body>
 <script src="./scrips/organiza_simpli.js"></script>
 <script src="./scrips/Simplificar.js"></script>
+<script src="./scrips/Redus_parent.js"></script>
 </html>
