--- a/simplifica.html
+++ b/simplifica.html
@@ -10,8 +10,8 @@
     <h1>Simplifição de expressões booleanas</h1>
     <a href="./index.html">Calculadora</a>
     <hr>
-    <input type="text" id="A"><br>
-    <input type="button" value="Simplificar" onclick="Calculo()">
+    <input type="text" id="A" value="((A+B).(C+D))"><br>
+    <input type="button" value="Simplificar" onclick="Calcular()">
     <div id="resultados">
 
     </div>
