--- a/simplifica.html
+++ b/simplifica.html
@@ -10,7 +10,7 @@
     <h1>Simplifição de expressões booleanas</h1>
     <a href="./index.html">Calculadora</a>
     <hr>
-    <input type="text" id="A" value="((A+B).(C+D))"><br>
+    <input type="text" id="A" value="(A+B).(C+D)"><br>
     <input type="button" value="Simplificar" onclick="Calcular()">
     <div id="resultados">
 
